@@ -1,3 +1,2 @@
-/pnfs/physik.rwth-aachen.de/dcms/magass/output/v0/lm1/out_11.root
-/pnfs/physik.rwth-aachen.de/dcms/magass/output/v0/lm1/out_12.root
-/pnfs/physik.rwth-aachen.de/dcms/magass/output/v0/lm1/out_13.root
+/pnfs/physik.rwth-aachen.de/dcms/magass/output/v23/lm1/out_10.root
+/pnfs/physik.rwth-aachen.de/dcms/magass/output/v23/lm1/out_11.root
