@@ -19,3 +19,6 @@ storage_element = grid-srm.physik.rwth-aachen.de
 storage_path = /pnfs/physik.rwth-aachen.de
 user_remote_dir = dcms/magass/dump/
 
+[EDG]
+#ce_black_list = in2p3,ifca,infn
+#ce_white_list = rwth
