@@ -1,3 +1,7 @@
+2009-02-19 Carsten Magass <magass -at- physik.rwth-aachen.de>
+        * improved analysis code & wrapper (new functionality)
+	* new flag in Filler (is_MC, has to set for data and MC accordingly) 
+	* tagged as version v2-4
 2009-02-16 Carsten Magass <magass -at- physik.rwth-aachen.de>
 	* fix in muon d0: now wrt to primary vertex position
 	* tagged as version v2-3
